# Chess

./: CMakeLists.txt  main.cpp
ChessWindow/: Window.cpp  Window.h
Pieces/: BitBoard.cpp  BitBoard.h  Pieces.cpp  Pieces.h
